# miracl

./: Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/Boolean/: index.html
docs/CellType/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/Float/: index.html
docs/Integer/: index.html
docs/NarrativeText/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/OrganismTaxon/: index.html
docs/String/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/credits/: index.html
docs/develops_from/: index.html
docs/develops_into/: index.html
docs/diagnostic_description/: index.html
docs/home/: index.html
docs/id/: index.html
docs/label/: index.html
docs/major_class/: index.html
docs/major_class_enum/: index.html
docs/major_life_stage/: index.html
docs/major_life_stage_enum/: index.html
docs/morphology/: index.html
docs/morphology_enum/: index.html
docs/organ_or_tissue/: index.html
docs/previous_observations/: index.html
docs/search/: search_index.json
docs/taxon/: index.html
miracl/: mianct.py  miracl.py
miracl/jsonld/: miracl.context.jsonld  miracl.model.context.jsonld  miraclmodel.context.jsonld
miracl/jsonschema/: mianct.schema.json  miracl.schema.json
model/: CONFIG.yaml
model/docs/: credits.md
tests/: test_input_against_model.py
(+3 files in other folders)
