[metadata]
name = miracl
url = https://github.com/lubianat/miracl
author = Chris Mungall
author_email = cjmungall@lbl.gov
summary = Minimal Information Reporting About a CelL
description = Minimal Information Reporting About a CelL LinkML schema
long_description = Minimal Information About a new Cell Type
home_page = https://lubianat.github.io/miracl
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    cell-types
    OWL
    linkml

[options]
include_package_data = True

[files]
packages =
    miracl

data-files = miracl/model = miracl/model/*
    miracl/jsonld_context = miracl/jsonld_context/*
    miracl/json_schema = miracl/json_schema/*
    miracl/model = miracl/model/*
    miracl/sqlddl = miracl/sqlddl/*


